--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "express": "^4.17.2",
+    "express-myconnection": "^1.0.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.13.0"
   },
